--- a/report_html_db/.egene.conf
+++ b/report_html_db/.egene.conf
@@ -1,1 +1,7 @@
-format=xml
+format=database
+database_name=chadodb
+database_user=chadouser
+database_password=
+database_host=127.0.0.1
+pipeline_id=4188
+set_id=2287
