Alterações para receber novo image logo

--- a/report_html_db/html_db.cnf
+++ b/report_html_db/html_db.cnf
@@ -57,6 +57,6 @@ eggnog_dir=eggnog_dir
 blast_dir_list=blastp_dir
 database_code_list=INSD
 homepage_text_file = example.json
-homepage_banner_image = 
+homepage_banner_image = template/zontal-admin/assets/img/logo.png
 
 #===================================================================================
