--- a/report_html_db/html_db.cnf
+++ b/report_html_db/html_db.cnf
@@ -16,15 +16,6 @@ PHASE= Report HTML
 program = report_html_db.pl
 #===================================================================================
 organism_name = Bacteria do curso
-index_file = index.html
-background_image_file = 
-component_name_list = annotation_trf.pl;annotation_trna.pl;annotation_alienhunter.pl;annotation_infernal.pl;annotation_rnammer.pl;annotation_transterm.pl;annotation_rbsfinder.pl;annotation_tcdb.pl;annotation_phobius.pl;annotation_tmhmm.pl;annotation_signalP.pl;annotation_blast.pl;annotation_rpsblast.pl;annotation_interpro.pl;annotation_orthology.pl;annotation_pathways.pl
-FT_artemis_dir = artemis_report
-FT_submission_dir = genbank_report
-#FT_artemis_selected_dir = artemis_dir_selected
-#FT_submission_selected_dir = genbank_dir_selected
-#GFF_dir = gff_dir
-#GFF_selected_dir = gff_dir_selected
 fasta_dir = seq
 aa_fasta_dir = orfs_aa
 nt_fasta_dir = orfs_nt
@@ -56,6 +47,7 @@ report_eggnog_dir= eggnog_report
 eggnog_dir=eggnog_dir
 blast_dir_list=blastp_dir
 database_code_list=INSD
+TCDB_file=/usr/local/genome/databases/TCDB/TCDB_ID_list
 homepage_text_file = example.json
 homepage_banner_image = template/zontal-admin/assets/img/logo.png
 
