--- a/report_html_db/teste_diretorio/db/saida_db/html_db2.cnf
+++ b/report_html_db/teste_diretorio/db/saida_db/html_db2.cnf
@@ -33,7 +33,7 @@ alienhunter_output_file=alienhunter.txt
 report_go_dir=/home/wendelhlc/git/report_html_db/report_html_db/teste_diretorio/db/saida_db/go_report_db/go_mapping.html;
 report_eggnog_dir= /home/wendelhlc/git/report_html_db/report_html_db/teste_diretorio/db/saida_db/eggnog_report_db/classes.html;
 report_pathways_dir = /home/wendelhlc/git/report_html_db/report_html_db/teste_diretorio/db/saida_db/kegg_report_db/classes.html;
-report_kegg_organism_dir=/home/wendelhlc/git/report_html_db/report_html_db/teste_diretorio/db/saida_db/kegg_report_db/classes.html;/home/wendelhlc/git/report_html_db/report_html_db/teste_diretorio/db/saida_db/kegg_report_db/classes.html
+report_kegg_organism_dir=/home/wendelhlc/git/report_html_db/report_html_db/teste_diretorio/db/saida_db/kegg_report_db/classes.html;/home/wendelhlc/git/report_html_db/report_html_db/teste_diretorio/db/saida_db/kegg_report_db/classes.html;
 blast_dir_list=/home/wendelhlc/git/report_html_db/report_html_db/blastp_dir
 database_code_list=INSD
 TCDB_file=/usr/local/genome/databases/TCDB/TCDB_ID_list
