--- a/report_html_db/teste_diretorio/db/saida_db/html_db2.cnf
+++ b/report_html_db/teste_diretorio/db/saida_db/html_db2.cnf
@@ -41,5 +41,5 @@ ko_file= /usr/local/genome/databases/kegg/ko/ko
 homepage_text_file = example.json
 homepage_banner_image = /home/wendelhlc/Downloads/rsz_platypus256x256.png
 filepath_log = /home/wendelhlc/git/report_html_db/report_html_db/teste_diretorio/db/saida_db/report_html_db.log
-component_name_list = annotation_trf.pl;annotation_trna.pl;annotation_alienhunter.pl;annotation_infernal.pl;annotation_rnammer.pl;annotation_transterm.pl;annotation_rbsfinder.pl;annotation_bigpi.pl;annotation_predgpi.pl;annotation_tcdb.pl;annotation_phobius.pl;annotation_tmhmm.pl;annotation_signalP.pl;annotation_blast.pl;annotation_rpsblast.pl;annotation_interpro.pl;annotation_orthology.pl;annotation_pathways.pl;annotation_mreps.pl;annotation_glimmer3.pl
+component_name_list = annotation_trf.pl;annotation_trna.pl;annotation_alienhunter.pl;annotation_infernal.pl;annotation_rnammer.pl;annotation_transterm.pl;annotation_rbsfinder.pl;annotation_bigpi.pl;annotation_predgpi.pl;annotation_tcdb.pl;annotation_phobius.pl;annotation_tmhmm.pl;annotation_signalP.pl;annotation_blast.pl;annotation_rpsblast.pl;annotation_interpro.pl;annotation_orthology.pl;annotation_pathways.pl;annotation_mreps.pl;annotation_glimmer3.pl;annotation_hmmer.pl;annotation_dgpi;
 #===================================================================================
