--- a/report_html_db/teste_diretorio/db/html_db2.cnf
+++ b/report_html_db/teste_diretorio/db/html_db2.cnf
@@ -10,7 +10,7 @@ PIPELINE= Report HTML da Bactéria do curso
 PHASE= Upload DB
 program = upload_db.pl
 #----------------------------------------------------------------------------------
-ids_file = saida_db/ids.ids
+ids_file = saida_db/saida_db.ids
 #===================================================================================
                               # _||_ #
                               # \  / #
@@ -42,4 +42,5 @@ homepage_text_file = example.json
 homepage_banner_image = /home/wendelhlc/Downloads/rsz_platypus256x256.png
 filepath_log = /home/wendelhlc/git/report_html_db/report_html_db/teste_diretorio/db/saida_db/report_html_db.log
 component_name_list = annotation_trf.pl;annotation_trna.pl;annotation_alienhunter.pl;annotation_infernal.pl;annotation_rnammer.pl;annotation_transterm.pl;annotation_rbsfinder.pl;annotation_bigpi.pl;annotation_predgpi.pl;annotation_tcdb.pl;annotation_phobius.pl;annotation_tmhmm.pl;annotation_signalP.pl;annotation_blast.pl;annotation_rpsblast.pl;annotation_interpro.pl;annotation_orthology.pl;annotation_pathways.pl;annotation_mreps.pl;annotation_glimmer3.pl;annotation_hmmer.pl;annotation_dgpi;
+annotation_dir=/home/wendelhlc/git/report_html_db/report_html_db/teste_diretorio/db/saida_db
 #===================================================================================
