--- a/report_html_db/teste_database/upload_xml/html_db2.cnf
+++ b/report_html_db/teste_database/upload_xml/html_db2.cnf
@@ -10,7 +10,7 @@ PIPELINE= Report HTML da Bactéria do curso
 PHASE= Upload DB
 program = upload_db.pl
 #----------------------------------------------------------------------------------
-ids_file = curtobacterium/saida.ids
+ids_file = curtobacterium/curtobacterium.ids
 #===================================================================================
                               # _||_ #
                               # \  / #
@@ -21,19 +21,17 @@ program = report_html_db.pl
 #===================================================================================
 html_dir=TESTE4
 organism_name=Bacteria do curso
-uniquename=Bacteria
 type_target_class_id=81525
-pipeline=4530
 fasta_dir = seq
 aa_fasta_dir = orfs_aa
 nt_fasta_dir = orfs_nt
 fasta_file = bacteria.fasta
 infernal_output_file=infernal.txt
 alienhunter_output_file=alienhunter.txt
-report_go_dir=/home/wendelhlc/git/report_html_db/report_html_db/teste_database/upload_xml/curtobacterium/reports/go_report_db/go_mapping.html;
-report_eggnog_dir= /home/wendelhlc/git/report_html_db/report_html_db/teste_database/upload_xml/curtobacterium/reports/eggnog_report_db/classes.html;
-report_pathways_dir = /home/wendelhlc/git/report_html_db/report_html_db/teste_database/upload_xml/curtobacterium/reports/kegg_report_db/classes.html;
-report_kegg_organism_dir=/home/wendelhlc/git/report_html_db/report_html_db/teste_database/upload_xml/curtobacterium/reports/kegg_report_db/classes.html;/home/wendelhlc/git/report_html_db/report_html_db/teste_database/upload_xml/curtobacterium/reports/kegg_report_db/classes.html;
+report_go_dir=/home/wendelhlc/git/report_html_db/report_html_db/teste_database/upload_xml/curtobacterium/reports/go_report/go_mapping.html;
+report_eggnog_dir= /home/wendelhlc/git/report_html_db/report_html_db/teste_database/upload_xml/curtobacterium/reports/eggnog_report/classes.html;
+report_pathways_dir = /home/wendelhlc/git/report_html_db/report_html_db/teste_database/upload_xml/curtobacterium/reports/kegg_report/classes.html;
+#report_kegg_organism_dir=/home/wendelhlc/git/report_html_db/report_html_db/teste_database/upload_xml/curtobacterium/reports/kegg_report_db/classes.html;/home/wendelhlc/git/report_html_db/report_html_db/teste_database/upload_xml/curtobacterium/reports/kegg_report_db/classes.html;
 blast_dir_list=/home/wendelhlc/git/report_html_db/report_html_db/blastp_dir
 database_code_list=INSD
 TCDB_file=/usr/local/genome/databases/TCDB/TCDB_ID_list
