Add filepath_assets parameter

--- a/report_html_db/example.conf
+++ b/report_html_db/example.conf
@@ -39,6 +39,7 @@ homepage_image_organism = /home/wendelhlc/curtobacterium.jpg
 filepath_log = /home/wendelhlc/teste_database/upload_xml/output_dir/report_html_db.log
 component_name_list = annotation_trf.pl;annotation_trna.pl;annotation_alienhunter.pl;annotation_infernal.pl;annotation_rnammer.pl;annotation_transterm.pl;annotation_rbsfinder.pl;annotation_bigpi.pl;annotation_predgpi.pl;annotation_tcdb.pl;annotation_phobius.pl;annotation_tmhmm.pl;annotation_signalP.pl;annotation_blast.pl;annotation_rpsblast.pl;annotation_interpro.pl;annotation_orthology.pl;annotation_pathways.pl;annotation_mreps.pl;annotation_glimmer3.pl;annotation_hmmer.pl;annotation_dgpi
 annotation_dir=/home/wendelhlc/teste_database/upload_xml/output_dir
+filepath_assets=/home/wendelhlc/git/report_html_db/report_html_db/assets.tar.gz
 #color_primary = "#3182bd"
 #color_accent = "#6baed6"
 #color_primary_text = "#FFF"
